--- a/.env
+++ b/.env
@@ -18,7 +18,7 @@ DB_PASSWORD=
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 
@@ -32,10 +32,10 @@ MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
 MAIL_USERNAME=mercy.mwaniki@strathmore.edu
-MAIL_PASSWORD=lajkslncuhiqgrqv
+MAIL_PASSWORD=qbjiomucbikdspqr
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_FROM_ADDRESS=mercy.mwaniki@strathmore.edu
+MAIL_FROM_NAME=Radiplus
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
